--- a/playbooks/sds_block_direct/volume.yml
+++ b/playbooks/sds_block_direct/volume.yml
@@ -11,14 +11,12 @@
     - name: Create volume
       hv_sds_block_volume:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         state: present
         spec:
           name: test-volume1
-          nickname: volume1-nickname
           capacity: 100MB
           pool_name: sp01
           saving_setting: Compression
@@ -31,15 +29,13 @@
     - name: Update volume
       hv_sds_block_volume:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         state: present
         spec:
           id: df63a5d9-32ea-4ae1-879a-7c23fbc574db
           name: new-test-volume1
-          nickname: new-nickname1
           saving_setting: Compression
       register: result
 
@@ -49,8 +45,7 @@
     - name: Expand volume by name
       hv_sds_block_volume:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         state: present
@@ -65,8 +60,7 @@
     - name: Expand volume by id
       hv_sds_block_volume:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         state: present
@@ -81,8 +75,7 @@
     - name: Add volume to compute nodes
       hv_sds_block_volume:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         state: present
@@ -98,8 +91,7 @@
     - name: Remove volume from compute nodes
       hv_sds_block_volume:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         state: present
@@ -115,8 +107,7 @@
     - name: Delete volume by name
       hv_sds_block_volume:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         state: absent
@@ -130,8 +121,7 @@
     - name: Delete volume by id
       hv_sds_block_volume:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         state: absent
