--- a/playbooks/vsp_uai_gateway/admin_password.yml
+++ b/playbooks/vsp_uai_gateway/admin_password.yml
@@ -11,7 +11,7 @@
     - name: Update UAI Gateway admin user password
       hv_gateway_admin_password:
         connection_info:
-          uai_gateway_address: gateway.company.com
+          uai_gateway_address: "{{ uai_gateway_address }}"
           api_token: "{{ ansible_vault_gateway_api_token }}"
         spec:
           password: 'new password'
