--- a/changelogs/changelog.yml
+++ b/changelogs/changelog.yml
@@ -1,21 +1,97 @@
 ---
-- version: 1.0.0
-  date: 2022-01-01
-  changes:
-    - Added new module: `example_module`
-    - Updated `existing_module` to support additional parameters
-    - Fixed a bug in `another_module` that caused incorrect output
+ancestor: 2.3
+releases:
+  3.0.0:
+    modules:
+    # The following modules are for Hitachi SDS Block storage systems
+    - name: hv_sds_block_chap_user_facts
+      description: Retrieves information about Hitachi SDS block storage system CHAP users.
+      namespace: 'hitachivantara'
+    - name: hv_sds_block_chap_user
+      description: Manages Hitachi SDS block storage system CHAP users.
+      namespace: 'hitachivantara'
+    - name: hv_sds_block_compute_node_facts
+      description: Retrieves information about Hitachi SDS block storage system compute nodes.
+      namespace: 'hitachivantara'
+    - name: hv_sds_block_compute_node
+      description: Manages Hitachi SDS block storage system compute nodes.
+      namespace: 'hitachivantara'
+    - name: hv_sds_block_compute_port_authentication
+      description: Manages Hitachi SDS block storage system compute port authentication mode settings.
+      namespace: 'hitachivantara'
+    - name: hv_sds_block_port_facts
+      description: Retrieves information about Hitachi SDS block storage system compute ports.
+      namespace: 'hitachivantara'
+    - name: hv_sds_block_storage_system_fact
+      description: Retrives information about a specific Hitachi SDS block storage system.
+      namespace: 'hitachivantara'
+    - name: hv_sds_block_volume_facts
+      description: Retrieves information about Hitachi SDS block storage system volumes.
+      namespace: 'hitachivantara'
+    - name: hv_sds_block_volume
+      description: Manages Hitachi SDS block storage system volumes.
+      namespace: 'hitachivantara'
 
-- version: 0.2.0
-  date: 2021-12-15
-  changes:
-    - Added support for Ansible 2.12
-    - Deprecated `old_module` in favor of `new_module`
-    - Improved performance of `some_module`
+    # The following modules are for Hitachi VSP and VSP One storage systems
+    - name: hv_gateway_admin_password
+      description: Updates password of gateway admin on Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_gateway_subscriber_fact
+      description: Retrieves information about subscriber on Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_gateway_subscriber
+      description: Manages subscribers of a partner on Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_hg_facts
+      description: Retrieves host group information from a specified Hitachi VSP storage system.
+      namespace: 'hitachivantara'
+    - name: hv_hg
+      description: Manages host group on Hitachi VSP storage system.
+      namespace: 'hitachivantara'
+    - name: hv_iscsi_target_facts
+      description: Retrieves information about iscsi targets from Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_iscsi_target
+      description: Manages iscsi target on Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_lun_facts
+      description: Retrieves information about logical units (LUNs) from Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_lun
+      description: Manages logical units (LUNs) on Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_paritygroup_facts
+      description: Retrives information about parity groups from Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_shadow_image_pair_facts
+      description: Retrieves information about shadow image pairs from Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_shadow_image_pair
+      description: Manages shadow image pairs on Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_snapshot_facts
+      description: Retrieves snapshot information from from Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_snapshot
+      description: Manages snapshots on Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_storagepool_facts
+      description: Retrieves storage pool information from Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_storagesystem_facts
+      description:  Retrives storage system information from Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_storagesystem
+      description: Manages Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_system_facts
+      description: Retrives system information from Hitachi VSP storage systems.
+      namespace: 'hitachivantara'
+    - name: hv_troubleshooting_facts
+      description: Collects the log bundles for Hitachi ansible modules host and Hitachi gateway service host.
+      namespace: 'hitachivantara'
+    - name: hv_uaig_token_fact
+      description: Retrieves an API token for the Histachi gateway service host.
+      namespace: 'hitachivantara'
 
-- version: 0.1.0
-  date: 2021-11-30
-  changes:
-    - Initial release of the Ansible collection
-    - Included modules: `module1`, `module2`, `module3`
-    - Added support for Ubuntu 20.04
+    release_date: '2024-06-17'
