--- a/playbooks/ansible_vault_vars/ansible_vault_gateway_var.yml
+++ b/playbooks/ansible_vault_vars/ansible_vault_gateway_var.yml
@@ -1,9 +1,9 @@
 # User will use Ansible Vault to encrypt this file.
 # Ansible will decrypt this file when it executes the playbook.
 
-uai_gateway_address: YOUR_GATEWAY_IP_ADDRESS
-ansible_vault_gateway_api_token: YOUR_GATEWAY_TOKEN
-ansible_vault_gateway_username: YOUR_GATEWAY_USERNAME
-ansible_vault_gateway_secret: YOUR_GATEWAY_PASSWORD
-subscriber_id: YOUR_GATEWAY_SUBSCRIBER_ID
+uai_gateway_address: YOUR_GATEWAY_IP_ADDRESS          # Example: uai_gateway1.company.com
+ansible_vault_gateway_api_token: YOUR_GATEWAY_TOKEN   # Use playbook uai_gateway_token.yml to generate a UAI Gateway Token
+ansible_vault_gateway_username: YOUR_GATEWAY_USERNAME # Gateway user name is admin
+ansible_vault_gateway_secret: YOUR_GATEWAY_PASSWORD   # Default password for admin is "overrunsurveysroutewarnssent"
+subscriber_id: YOUR_GATEWAY_SUBSCRIBER_ID             # Example: 12345
 connection_type: gateway 
