--- a/playbooks/sds_block_direct/volume_facts.yml
+++ b/playbooks/sds_block_direct/volume_facts.yml
@@ -11,8 +11,7 @@
     - name: Get volumes by default count
       hv_sds_block_volume_facts:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
       register: result
@@ -23,8 +22,7 @@
     - name: Get volumes by count
       hv_sds_block_volume_facts:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         spec:
@@ -37,8 +35,7 @@
     - name: Get volumes by names
       hv_sds_block_volume_facts:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         spec:
@@ -51,8 +48,7 @@
     - name: Get volumes by nicknames
       hv_sds_block_volume_facts:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         spec:
@@ -65,8 +61,7 @@
     - name: Get volumes by other filters
       hv_sds_block_volume_facts:
         connection_info:
-          connection_type: "direct"
-          address: vssb.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         spec:
