--- a/playbooks/vsp_direct/delete_lun_from_host.yml
+++ b/playbooks/vsp_direct/delete_lun_from_host.yml
@@ -11,8 +11,7 @@
     - name: Unpresent lun from hostgroup with direct connection
       hv_hg:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         state: present
@@ -29,8 +28,7 @@
     - name: Delete lun with direct connection
       hv_lun:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         state: absent
