--- a/playbooks/vsp_direct/iscsitarget.yml
+++ b/playbooks/vsp_direct/iscsitarget.yml
@@ -11,12 +11,11 @@
     - name: Create iscsi target
       hv_iscsi_target:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         state: present
         spec:
           name: 'iscsi-target-server-1'
@@ -36,12 +35,11 @@
     - name: Update iscsi target host mode and host mode options
       hv_iscsi_target:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         state: present
         spec:
           name: 'iscsi-target-server-1'
@@ -56,12 +54,11 @@
     - name: Add chap users to iscsi target
       hv_iscsi_target:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         state: present
         spec:
           state: add_chap_user
@@ -80,12 +77,11 @@
     - name: Remove chap user from iscsi target
       hv_iscsi_target:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         state: present
         spec:
           state: remove_chap_user
@@ -102,12 +98,11 @@
     - name: Add iqn initiators to iscsi target
       hv_iscsi_target:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         state: present
         spec:
           state: add_iscsi_initiator
@@ -123,12 +118,11 @@
     - name: Remove iqn initiators from iscsi target
       hv_iscsi_target:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         state: present
         spec:
           state: remove_iscsi_initiator
@@ -144,12 +138,11 @@
     - name: Attach luns to iscsi target
       hv_iscsi_target:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         state: present
         spec:
           state: attach_lun
@@ -164,12 +157,11 @@
     - name: Detach luns from iscsi target
       hv_iscsi_target:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         state: present
         spec:
           state: detach_lun
@@ -184,12 +176,11 @@
     - name: Delete iscsi target
       hv_iscsi_target:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         state: absent
         spec:
           name: 'iscsi-target-server-1'
