--- a/playbooks/vsp_direct/shadowimage_facts.yml
+++ b/playbooks/vsp_direct/shadowimage_facts.yml
@@ -11,12 +11,11 @@
     - name: Get all shadow image pairs
       hv_shadow_image_pair_facts:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
       register: result
 
     - debug:
@@ -25,15 +24,13 @@
     - name: Get one shadow image pair
       hv_shadow_image_pair_facts:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         spec:
           pvol: 274
-          svol: 277
       register: result
 
     - debug:
