--- a/playbooks/vsp_direct/snapshot_facts.yml
+++ b/playbooks/vsp_direct/snapshot_facts.yml
@@ -11,12 +11,11 @@
     - name: Get all snapshot pairs
       hv_snapshot_facts:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
       register: result
 
     - debug:
@@ -25,12 +24,11 @@
     - name: Get snapshot pairs with same pvol
       hv_snapshot_facts:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         spec:
           pvol: 176
       register: result
@@ -41,12 +39,11 @@
     - name: Get one snapshot pair
       hv_snapshot_facts:
         connection_info:
-          connection_type: "direct"
-          address: storage1.company.com
+          address: "{{ storage_address }}"
           username: "{{ ansible_vault_storage_username }}"
           password: "{{ ansible_vault_storage_secret }}"
         storage_system_info:
-          serial: 40014
+          serial: "{{ storage_serial }}"
         spec:
           pvol: 176
           mirror_unit_id: 3
