--- a/playbooks/vsp_uai_gateway/delete_lun_from_host_gateway.yml
+++ b/playbooks/vsp_uai_gateway/delete_lun_from_host_gateway.yml
@@ -6,6 +6,7 @@
 
   vars_files:
     - ../ansible_vault_vars/ansible_vault_gateway_var.yml
+    - ../ansible_vault_vars/ansible_vault_storage_var.yml
 
   vars:
     - luns:
@@ -20,8 +21,8 @@
           serial: '{{ storage_serial }}'
           
         connection_info:
-          connection_type: "gateway"
-          address: gateway.company.com
+          connection_type: "{{ connection_type }}"
+          address: "{{ uai_gateway_address }}"
           api_token: "{{ ansible_vault_gateway_api_token }}"
           subscriber_id: '{{ subscriber_id | default(omit) }}'
 
@@ -41,10 +42,10 @@
           serial: '{{ storage_serial }}'
           
         connection_info:
-          address: gateway.company.com
+          address: "{{ uai_gateway_address }}"
           api_token: "{{ ansible_vault_gateway_api_token }}"
           subscriber_id: '{{ subscriber_id | default(omit) }}'
-          connection_type: "gateway"
+          connection_type: "{{ connection_type }}"
 
         state: absent
 
