--- a/playbooks/vsp_uai_gateway/subscriber_facts.yml
+++ b/playbooks/vsp_uai_gateway/subscriber_facts.yml
@@ -6,13 +6,14 @@
 
   vars_files:
     - ../ansible_vault_vars/ansible_vault_gateway_var.yml
+    - ../ansible_vault_vars/ansible_vault_storage_var.yml
 
   tasks:
     - name: Get all subscribers
       hv_gateway_subscriber_fact:
         connection_info:
-          connection_type: "gateway"
-          address: gateway.company.com
+          connection_type: "{{ connection_type }}"
+          address: "{{ uai_gateway_address }}"
           api_token: "{{ ansible_vault_gateway_api_token }}"
       register: result
 
@@ -22,11 +23,11 @@
     - name: Get one subscriber
       hv_gateway_subscriber_fact:
         connection_info:
-          connection_type: "gateway"
-          address: gateway.company.com
+          connection_type: "{{ connection_type }}"
+          address: "{{ uai_gateway_address }}"
           api_token: "{{ ansible_vault_gateway_api_token }}"
         spec:
-          subscriber_id: '12345'
+          subscriber_id: '"{{ subscriber_id }}"'
       register: result
 
     - debug:
